tooling/nargo_cli/tests/snapshots/execution_success/brillig_arrays/execute__tests__force_brillig_true_inliner_-9223372036854775808_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
warning: Indexing an array or slice with a type other than `u32` is deprecated and will soon be an error
   ┌─ src/main.nr:16:14
   │
16 │     assert(y[x[0]] == 5);
   │              ----
   │
